examples/test/testpolicy5195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5195
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key8: value11
      key4: value3
      key37: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value0
          key21: value31
      podSelector:
        matchLabels:
          key39: value20
          key11: value39
          key8: value24
